Se agrega el main a la pagina clon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- Google Font Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
     <link rel="stylesheet" href="estilos.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>Google Chrome_Clon</title>
 </head>
 <body>
@@ -20,8 +17,24 @@
             <a href="#">Gmail</a>
             <a href="#">Imágenes</a>
             <span class="material-icons header-apps"> apps </span>
-            <img class="gb_Aa gbii" src="https://lh3.googleusercontent.com/ogw/ADea4I4GWM65i0FopeibPtN0EkvksAz0hNmolBpQoEMpQfs=s32-c-mo" srcset="https://lh3.googleusercontent.com/ogw/ADea4I4GWM65i0FopeibPtN0EkvksAz0hNmolBpQoEMpQfs=s32-c-mo 1x, https://lh3.googleusercontent.com/ogw/ADea4I4GWM65i0FopeibPtN0EkvksAz0hNmolBpQoEMpQfs=s64-c-mo 2x " alt="" aria-hidden="true" data-noaft="" data-atf="1" data-frt="0">
+            <img id="perfil" src="https://lh3.googleusercontent.com/ogw/ADea4I4GWM65i0FopeibPtN0EkvksAz0hNmolBpQoEMpQfs=s32-c-mo" srcset="https://lh3.googleusercontent.com/ogw/ADea4I4GWM65i0FopeibPtN0EkvksAz0hNmolBpQoEMpQfs=s32-c-mo 1x, https://lh3.googleusercontent.com/ogw/ADea4I4GWM65i0FopeibPtN0EkvksAz0hNmolBpQoEMpQfs=s64-c-mo 2x " alt="" aria-hidden="true" data-noaft="" data-atf="1" data-frt="0">
         </div>
     </header>
+    <main>
+        <img id="logo" src="https://www.google.com.mx/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="logo Google" />
+        <div class="search">
+            <div class="search-input">
+                <span class="material-icons" id="searchbutton">search</span>
+                <input type="text" id="barra">
+                <span class="material-icons" id="mic">mic</span>
+            </div>
+        </div>
+        <div class="search-buttons">
+            <button>Buscar con Google</button>
+            <button>Me siento con suerte</button>
+        </div>
+        <p id="idioma">Ofrecido por Google en:<a href="#">English</a></p>
+    </main>
+    
 </body>
 </html>
