--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
         </div>
         <p id="idioma">Ofrecido por Google en:<a href="#">English</a></p>
     </main>
-    
+    <footer id="ubicacion">
+        <p>México</p>
+    </footer>
+    <footer>
+            <div class="footer-left">
+                <a href="#">Sobre Google</a>
+                <a href="#">Publicidad</a>
+                <a href="#">Negocios</a>
+                <a href="#">Cómo funciona la búsqueda</a>
+            </div>
+            <div class="footer-right">
+                <a href="#">Privacidad</a>
+                <a href="#">Condiciones</a>
+                <a href="#">Preferencias</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
